# dagster-iceberg

./: .gitignore  README.md
data-platform/: workspace.yaml
data-platform/fab_data/: README.md  pyproject.toml  setup.cfg
data-platform/fab_data/fab_data/: assets.py  checks.py  definitions.py  raw_sensor.py  resources.py
data-platform/fab_dbt/jaffle_shop/: .user.yml  tutorial.duckdb
fab-data/: fab_report.py  pyproject.toml  setup.py
fab-data/fab_data/: assets.py  definitions.py  raw_sensor.py  resources.py  schemas.py
raw_data/: fake_data.py
