[project]
name = "fab_data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud"
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "fab_data.definitions"
project_name = "fab_data"

[tool.setuptools.packages.find]
exclude=["fab_data_tests"]
